<resources>
    <string name="app_name">Upcoming Movies App</string>

    <string name="overview">Overview</string>
    <string name="overview_not_available">Overview not available</string>
    <string name="search">Search</string>
    <string name="upcomingMovies">Upcoming Movies</string>
    <string name="search_movie">Search movie…</string>
    <string name="ok" translatable="false">OK</string>
    <string name="release_date">Release date:</string>
    <string name="vote_average" translatable="false">%1$s/10</string>
    <string name="rating">Rating</string>

    <string name="empty_state_title">No Movies found</string>
    <string name="empty_state_subtitle">Couldn\'t find any Movies</string>

    <string name="error_state_title">Error loading Movies</string>
    <string name="error_state_subtitle">We had a problem loading the Movies list, please check your internet connection and click the button to retry</string>

    <string name="error_state_retry">Retry</string>
    <string name="back">Back</string>
</resources>
