<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbarSize"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/default_margin"
        app:title="@string/search">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/back_button_size"
                android:layout_height="@dimen/back_button_size"
                android:layout_marginEnd="@dimen/big_margin"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:src="?android:attr/homeAsUpIndicator" />

            <ImageView
                android:id="@+id/searchButton"
                android:layout_width="@dimen/search_button_size"
                android:layout_height="@dimen/search_button_size"
                android:contentDescription="@string/search"
                android:src="@android:drawable/ic_menu_search" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_movie"
                android:maxLines="1">

                <requestFocus />
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/executeSearch"
                android:layout_width="@dimen/search_button_action_size"
                android:layout_height="wrap_content"
                android:text="@string/ok" />

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <include layout="@layout/movies_list" />

    <include
        layout="@layout/empty_state"
        tools:visibility="gone" />

    <include
        layout="@layout/error_state"
        tools:visibility="gone" />

    <include
        layout="@layout/progress_bar"
        tools:visibility="gone" />

</RelativeLayout>
